parent ff676bc09f76befffe6c93d6e20d24d70cb7b4a8 author esarneso <emily.ecoff@gmail.com> 1700068240 -0500 committer Jonathan Woytek <jonathan.woytek@analygence.com> 1706644390 -0500
Auth and usability improvements, and other bug fixes

- case insensitive usernames for oauth provider

--- a/cvdp/templates/cvdp/base.html
+++ b/cvdp/templates/cvdp/base.html
@@ -159,7 +159,7 @@
             <li class="menu-item {% if scoringpage %}active {% endif %}">
               <a href="{% url 'adscore:index' %}" class="menu-link">
                 <i class="menu-icon tf-icons fas fa-star"></i>
-                <div data-i18n="Analytics">Scoring</div>
+                <div data-i18n="Analytics">SSVC</div>
               </a>
             </li>
 	    {% endif %}
