Bug fixes and usability improvements

--- a/assets/css/casethread.css
+++ b/assets/css/casethread.css
@@ -17,6 +17,11 @@
     justify-content: space-between;
 }
 
+.scorelist-description {
+    height: 70px;
+    overflow: hidden;
+}
+
 .card-wrapper .group-app {
     height: auto !important;
 }
