use django-allauth built-in mfa instead of the django-allauth-2fa package. override templates"

--- a/authapp/templates/account/email/email_confirmation_signup_message.html
+++ b/authapp/templates/account/email/email_confirmation_signup_message.html
@@ -2,6 +2,9 @@
 {% load account %}
 {% load i18n %}
 
+{% block title %}
+One last step: Confirm your e-mail
+{% endblock %}
 
 {% block content %}
 <p>
