--- a/cvdp/templates/cvdp-email/en/email_html_bootstrap.html
+++ b/cvdp/templates/cvdp-email/en/email_html_bootstrap.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
@@ -44,7 +45,7 @@
                               <tbody>
                                 <tr>
                                   <td style="line-height: 24px; font-size: 16px; margin: 0;" align="left">
-                                    <img class="w-100" src="{{ logo }}" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; border-style: none; border-width: 0;">
+                                    <img class="w-100" src="{% static logo %}" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; border-style: none; border-width: 0;">
                                   </td>
                                 </tr>
                               </tbody>
