parent b0d08e22265c7905f27eba0fdc9ac3f3ee382de0 author esarneso <emily.ecoff@gmail.com> 1701809922 -0500 committer Jonathan Woytek <jonathan.woytek@analygence.com> 1706645019 -0500
parent b0d08e22265c7905f27eba0fdc9ac3f3ee382de0
author esarneso <emily.ecoff@gmail.com> 1701809922 -0500
committer Jonathan Woytek <jonathan.woytek@analygence.com> 1706645016 -0500

Bug fixes and usability improvements

- change namespace in CSAF to use the SERVER NAME - still need to customize this section better
- fix error when dependencies don't exist
- move dependency add icon to dependcy column in component table. Several small fixes for usability
- add ability to clone component
- add gin index for affected
- fix bug with unassigning users from case. Confirm which user(s) should be unassigned.  Add modal to prompt for confirmation
- add tests for assignment/unassignment
- fix email logo
- fix bugs related to adding/notifying users
- add indicator of message thread participants besides last message author

--- a/assets/css/casethread.css
+++ b/assets/css/casethread.css
@@ -6,6 +6,31 @@
     display: inline-block;
 }
 
+.clicktocopy {
+    border-bottom: 1px dotted #000;
+    cursor: copy;
+}
+
+.input-group .rbt {
+    display: flex;
+    flex: 1 1 0%;
+    height: 100%;
+    position: relative;
+}
+
+.typeahead * {
+    margin: 0 !important;
+}
+
+.rbt-input-multi .rbt-input-main {
+    padding: 1px 0 4px 0 !important;
+    offset: 1px 0 4px 0;
+}
+
+.modal-table{
+    overflow-x: auto;
+}
+
 .card-grid-wrapper .col {
     display: flex;
     justify-content:space-between;
