parent ff47646b619d50a1f0863e8c8e36d4342d6604c1 author esarneso <emily.ecoff@gmail.com> 1705423829 -0500 committer Jonathan Woytek <jonathan.woytek@analygence.com> 1706645204 -0500
Bug fixes and usability improvements

- show group affiliation on messages
- only import celery and set vars if using celery
- fix issue with adding references introduced in recent commit. Add validator for references schema
- add CVE- to CVE in CSAF
- Fix issues with CSAF revision history
- Allow users to officially publish an advisory (for download only at the moment)
- Fix issue with publishing CVE and stale data populating publish vul modal

--- a/assets/css/casethread.css
+++ b/assets/css/casethread.css
@@ -6,6 +6,12 @@
     display: inline-block;
 }
 
+.inbox-pagination {
+    position: absolute;
+    bottom: 0;
+    margin: auto;
+}
+
 .clicktocopy {
     border-bottom: 1px dotted #000;
     cursor: copy;
@@ -105,7 +111,7 @@
     padding: 15px;
 }
 
-.thread-messages-preview {
+.thread-preview-list {
     padding: 15px;
 }
 
